force-app/main/default/objects/Audit_Rule__c/Audit_Rule__c.object-meta.xml
<CustomObject>
    <label>Audit Rule</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>