force-app/main/default/objects/Audit_Rule__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>