force-app/main/default/objects/Audit_Rule__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <externalId>true</externalId>
    <label>Sequence</label>
    <precision>7</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>