force-app/main/default/objects/Audit_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>Field__c</columns>
    <columns>Condition__c</columns>
    <columns>Value__c</columns>
    <columns>Permission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>